test/regexp/elliot/check-regexp-none-compiler-error.good
check-regexp-none-compiler-error.chpl:2: error: Cannot use Regexp with CHPL_REGEXP=none
